# squid-as-a-service

./: .gitignore  README.md
charm/: charmcraft.yaml  pyproject.toml  tox.ini
charm/src/: charm.py  squid.py  watcher.py
charm/src/django_app/: manage.py
charm/src/django_app/templates/: squid.conf.j2
charm/src/django_app/terrasquid/: settings.py  urls.py  wsgi.py
charm/src/django_app/terrasquid/api/: exceptions.py  metrics.py  permissions.py  serializers.py  urls.py  views.py
charm/src/grafana_dashboards/: terrasquid.json
charm/src/prometheus_alert_rules/: terrasquid.rules.yml
charm/src/terrasquid/terrasquid/: settings.py
charm/src/terrasquid/terrasquid/api/: models.py  permissions.py  views.py
charm/src/terrasquid/terrasquid/api/migrations/: 0001_initial.py
charm/tests/integration/: conftest.py  test_charm.py
charm/tests/unit/: conftest.py  test_api.py  test_charm.py
demo/: main.tf  (+2 more)
service/: pyproject.toml
service/.specify/: integration.json
service/.specify/extensions/: .registry
service/.specify/integrations/: kilocode.manifest.json  speckit.manifest.json
service/.specify/workflows/: workflow-registry.json
service/src/terrasquid_render/: __init__.py  cli.py  parser.py  renderer.py  resolver.py
service/src/terrasquid_render/models/: __init__.py  base.py  juju_model.py  proxy.py  ruleset.py
service/templates/: _helpers.j2
service/templates/juju_model/: main.tf.j2  outputs.tf.j2
service/templates/proxy/: main.tf.j2  outputs.tf.j2  variables.tf.j2
service/templates/ruleset/: main.tf.j2  outputs.tf.j2  variables.tf.j2
service/templates/shared/: _default_rules.tf.j2
service/tests/fixtures/: compute-juju-model.yaml  network-proxy-ruleset.yaml  network-proxy.yaml
service/tests/integration/: test_full_scan.py  test_juju_model.py  test_proxy.py  test_quickstart.py  test_ruleset.py
service/tests/unit/: test_models_base.py  test_models_juju_model.py  test_models_proxy.py  test_models_ruleset.py  test_parser.py  test_renderer.py  test_renderer_snapshots.py  test_resolver.py
service/tests/unit/snapshots/test_renderer_snapshots/test_render_compute_juju_model_deterministic/: compute_juju_model_basic.tf
service/tests/unit/snapshots/test_renderer_snapshots/test_render_compute_juju_model_multiple_rulesets/: compute_juju_model_multiple_rulesets.tf
(+118 files in other folders)
