[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squid-as-a-service"
version = "0.1.0"
description = "Terrasquid - Squid-as-a-Service Juju machine charm"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
dependencies = [
    "ops>=3,<4",
    "django>=5.2,<6",
    "djangorestframework>=3.15",
    "djangorestframework-api-key>=3.1",
    "drf-spectacular",
    "gunicorn",
    "psycopg[binary]>=3.3",
    "Jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "ruff",
    "pyright",
    "codespell",
    "ops[testing]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM", "ARG"]
ignore = ["D100", "D104", "D107", "D203", "D213"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
exclude = ["**/__pycache__"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "terrasquid.settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
